--- a/app/assets/stylesheets/_mobile.scss
+++ b/app/assets/stylesheets/_mobile.scss
@@ -69,12 +69,12 @@
 
 .login-container {}
 
-.login-form {
-  input[type=text],
-  input[type=password] {    
-    width: 98%;
-  }
-}
+// .login-form {
+//   input[type=text],
+//   input[type=password] {    
+//     width: 98%;
+//   }
+// }
 
 
 //-- FIRST LOGIN
